<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="com.example.myapplication.ListActivity">

    <!-- Description category -->
    <LinearLayout
        android:id="@+id/container_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/taskdetail_description"
            style="@style/EditorFieldStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Description field -->
            <EditText
                android:id="@+id/edit_taskdetail_description"
                android:hint="@string/hint_taskdetail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Task parent category -->
    <LinearLayout
        android:id="@+id/container_taskparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/taskdetail_taskparent"
            style="@style/EditorFieldStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Task drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_task"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Task parent priority -->
    <LinearLayout
        android:id="@+id/container_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/taskdetail_priority"
            style="@style/EditorFieldStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Priority drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
